feat: add password uppercase validation