@@ -1,5 +1,6 @@
 package com.hedrobyte.securepassword.service;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
@@ -7,14 +8,24 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class PasswodServiceTest {
+    private PasswodService passwodService;
 
-    private final PasswodService passwodService = new PasswodService();
+    @BeforeEach
+    public void setUp() {
+        passwodService = new PasswodService();
+    }
 
     @Test
     public void testPasswordLength() {
-        List<String> failures = passwodService.validatePassword("1234567");
+        List<String> failures = passwodService.validatePassword("1aA!");
         assertEquals(1, failures.size());
-        assertEquals("A senha deve conter pelo menos 8 caracteres", failures.getFirst());
+        assertEquals("A senha deve conter pelo menos 8 caracteres", failures.get(0));
     }
 
+    @Test
+    public void testPasswordUpperCase() {
+        List<String> failures = passwodService.validatePassword("12345678a!");
+        assertEquals(1, failures.size());
+        assertEquals("A senha deve conter pelo menos uma letra maiúscula", failures.get(0));
+    }
 }
